TAG: qcreports_db-3-5-3-11
DATE: 06/08/2007
STAFF: dbm
CHANGES:
1) Remove the first 2 reports from GXD_SpecNoAge.py (TR8339)

TAG: qcreports_db-3-5-3-10
DATE: 06/07/2007
STAFF: dbm
CHANGES:
1) Modified GXD_FullCodeable.py (TR8235 and TR8289)

TAG: qcreports_db-3-5-3-9
DATE: 06/01/2007
STAFF: dbm
CHANGES:
1) Added GXD_WithdrawnMarker.py (TR8212)
2) Remove GXD_DupGenotype.rpt from the GXD section of qcr.html because
   it is already in the Alleles section (per Connie)

TAG: qcreports_db-3-5-3-8
DATE: 05/30/2007
STAFF: dbm
CHANGES:
1) Added a third report to GXD_FullCodeable.py (TR8182)
2) Added a link to the new report to qcr.html

TAG: qcreports_db-3-5-3-7
DATE: 05/18/2007
STAFF: sc
CHANGES:
1) MRK_ENSEMBLnoGeneModel.py and VEGA version - filter out
   non-official markers.

TAG: qcreports_db-3-5-3-6
DATE: 05/17/2007
STAFF: sc
CHANGES: 
1) TR8304 ensembl release 44 - mgd/MRK_NoENSEMBL.py - update to exclude 
obsoletes and include only protein_coding and pseudogene
2) TR8288 - new reports:
a) mgd/MRK_MultMarkerGeneModels.sql - new
b) mgd/MRK_ENSEMBLnoGeneModel.py - new
c) mgd/MRK_VEGAnoGeneModel.py - new

TAG: qcreports_db-3-5-3-5
DATE: 05/08/2007
STAFF: dbm
CHANGES:
1) Another fixed to PRB_StrainJAX5.sql: Restore original report and detect
   any marker/allele record changes (per acv).

TAG: qcreports_db-3-5-3-4
DATE: 05/07/2007
STAFF: dbm
CHANGES:
1) Fixed PRB_StrainJAX5.sql to make it look for strains with new alleles
   instead of strains with new markers (per acv).
2) Fixed sort order of PRB_StrainJAX2.py and PRB_StrainJAX4.sql (per acv).

TAG: qcreports_db-3-5-3-3
DATE: 05/04/2007
STAFF: sc
CHANGES: TR8288
1) updated mgd/MRK_MultCoordinate.sql, mgd/MRK_NoVEGA.py
2) updated qcr.html adding vega to MRK_MltCoordinate.rpt

TAG: qcreports_db-3-5-3-2
TAG: qcreports_db-3-5-3-1
DATE: 04/24/2007
STAFF: dbm
CHANGES:
1) TR8253 - Added PRB_StrainJAX5.sql
2) TR8267 - Added PRB_StrainJAX6.sql

TAG: qcreports_db-3-5-1-46
DATE: 02/27/2007
STAFF: sc
CHANGES: